src/test/ui/hrtb/hrtb-perfect-forwarding.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-perfect-forwarding.rs:46:5
   |
LL |     foo_hrtb_bar_not(&mut t); //~ ERROR not general enough
   |     ^^^^^^^^^^^^^^^^
   |
   = note: Due to a where-clause on `foo_hrtb_bar_not`,
   = note: `Foo<&'0 isize>` would have to be implemented for the type `&mut T`, for any lifetime `'0`
   = note: but `Foo<&'1 isize>` is actually implemented for the type `&mut T`, for some lifetime `'1`

error: aborting due to previous error

